Add Semaphore and ProducerConsumerBuffer
The implementation is taken from one of my earlier projects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,9 @@ add_library(PatternSearch
 			  src/FileCrawler.cpp 
 			  src/TextSegment.h 
 			  src/TextSegment.cpp 
+			  src/Semaphore.h 
+			  src/Semaphore.cpp 
+			  src/ProducerConsumerBuffer.h
 )
 
 add_executable(PatternSearchApp
